--- a/css/index.css
+++ b/css/index.css
@@ -15,3 +15,13 @@
 .canvas-box {
     border: solid #f00 1px;
 }
+
+.section {
+    display: inline-block;
+}
+.section .title {
+    text-align: center;
+    color: #f00;
+    font-size: 26px;
+    line-height: 46px;
+}
